# zip-investigator

./: Cargo.toml  README.md
src/: main.rs
