[package]
name = "zip-investigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
walkdir = "2.4.0"
humansize = "2.1.3"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
reqwest = { version = "0.11.24", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
indicatif = "0.17.8"
itertools = "0.12.1"

