[package]
name = "zip-investigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.6"
walkdir = "2.4.0"
clap = { version = "4.1.4", features = ["derive"] }
indicatif = "0.17.8"
itertools = "0.12.1"

